@@ -3,22 +3,24 @@ package service;
 import model.Task;
 
 import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 
 public class InMemoryHistoryManager implements HistoryManager {
-    private final List<Task> history;
+    private final LinkedList<Task> history;
+    private static final int HISTORY_SIZE = 10;
 
     public InMemoryHistoryManager() {
-        this.history = new ArrayList<>();
+        this.history = new LinkedList<>();
     }
 
     @Override
     public void add(Task task) {
 
-        if (history.size() < 10) {
+        if (history.size() < HISTORY_SIZE) {
             history.add(task);
         } else {
-            history.remove(0);
+            history.removeFirst();
             history.add(task);
         }
 
@@ -26,7 +28,7 @@ public class InMemoryHistoryManager implements HistoryManager {
 
     @Override
     public List<Task> getHistory() {
-        return history;
+        return new LinkedList<>(history);
     }
 
 }
